--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>RooSpinny.com - Aussie Lotto | Your Ticket to Big Wins!</title>
+		<title>MirageLines.com - Aussie Lotto | Your Ticket to Big Wins!</title>
 		<link rel="icon" href="./assets/images/ico3.png" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -44,7 +44,13 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-md-6">
-						<a href="./?age-verification=true" class="rsn-logo">Roo<span>Spinny</span></a>
+						<a href="./?age-verification=true" class="rsn-logo">
+							<img
+								src="./assets/images/logo.png"
+								alt="MirageLines Logo"
+								style="width: 300px"
+							/>
+						</a>
 					</div>
 					<div class="col-md-6 text-end">
 						<button
@@ -88,7 +94,7 @@
 						<div class="col-12 rsn-hero-content">
 							<h1>Experience the Excitement of Australia's Premier Lottery!</h1>
 							<p>
-								Become part of a vibrant community of winners at RooSpinny. With
+								Become part of a vibrant community of winners at MirageLines. With
 								two draws every week, your next big win could be just a spin
 								away!
 							</p>
@@ -111,7 +117,7 @@
 							<div class="rsn-about-img">
 								<img
 									src="./assets/images/about.png"
-									alt="Learn about RooSpinny Lottery"
+									alt="Learn about MirageLines Lottery"
 									class="img-fluid"
 								/>
 							</div>
@@ -120,7 +126,7 @@
 							<div class="rsn-about-content">
 								<h2 class="rsn-section-title">Who We Are</h2>
 								<p>
-									Since 2010, RooSpinny has been redefining the lottery
+									Since 2010, MirageLines has been redefining the lottery
 									experience in Australia. Over AU$10 million in prizes have
 									been awarded to lucky participants nationwide. Our signature
 									spinning wheel brings a fresh twist to classic lotto fun.
@@ -147,7 +153,7 @@
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-lg-8 text-center mb-5">
-							<h2 class="rsn-section-title">What Makes RooSpinny Stand Out?</h2>
+							<h2 class="rsn-section-title">What Makes MirageLines Stand Out?</h2>
 							<p class="lead">
 								Discover why we're Australia's most trusted and rewarding
 								lottery
@@ -313,7 +319,7 @@
 										<div class="accordion-body">
 											<p>
 												Prizes up to AU$5,000 are instantly credited to your
-												RooSpinny account. For larger amounts, you'll need to
+												MirageLines account. For larger amounts, you'll need to
 												fill out a claim form and verify your identity. Jackpot
 												winners are contacted by our team within 24 hours of the
 												draw.
@@ -346,7 +352,7 @@
 									>
 										<div class="accordion-body">
 											<p>
-												The odds of winning any prize in RooSpinny are 1 in 15.
+												The odds of winning any prize in MirageLines are 1 in 15.
 												The jackpot odds are about 1 in 8 million. Lower prize
 												tiers have better odds:
 											</p>
@@ -379,7 +385,7 @@
 									>
 										<div class="accordion-body">
 											<p>
-												Currently, RooSpinny is only open to players who are
+												Currently, MirageLines is only open to players who are
 												physically in Australia. You must be at least 18 years
 												old and provide valid Australian ID for prizes over
 												AU$1,000.
@@ -396,7 +402,7 @@
 
 			<section id="how-to-play" class="rsn-how-to-play section-padding">
 				<div class="container">
-					<h2 class="section-title">How to Join RooSpinny</h2>
+					<h2 class="section-title">How to Join MirageLines</h2>
 					<div class="row">
 						<div class="col-lg-8 mx-auto">
 							<div class="rsn-step">
@@ -457,7 +463,7 @@
 								</div>
 								<h3>Email Us</h3>
 								<p>We aim to reply to all messages within 24 hours.</p>
-								<p><strong>support@roospinny.com</strong></p>
+								<p><strong>support@MirageLines.com</strong></p>
 							</div>
 						</div>
 						<div class="col-md-4 mb-4">
@@ -488,7 +494,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-4 mb-4">
-							<a href="./?age-verification=true" class="rsn-footer-logo">RooSpinny</a>
+							<a href="./?age-verification=true" class="rsn-footer-logo"><img src="./assets/images/logo.png" style="width: 200px;" alt="MirageLines Logo"></a>
 							<p>
 								Australia's top lottery since 2017. Fully licensed and regulated
 								by the Australian Lottery Commission.
@@ -515,7 +521,7 @@
 						<div class="col-lg-4 col-md-4 mb-4">
 							<div class="rsn-footer-links">
 								<h5>Help & Support</h5>
-								<a href="mailto:support@roospinny.com">Email Us</a>
+								<a href="mailto:support@MirageLines.com">Email Us</a>
 								<a href="tel:+1800858858">Call 1800 858 858</a>
 								<a href="https://www.gambleaware.org/" target="_blank">GambleAware</a>
 							</div>
@@ -546,7 +552,7 @@
 									>
 								</p>
 								<p>
-									RooSpinny.com is fully authorized by the
+									MirageLines.com is fully authorized by the
 									<strong>New South Wales Government Department</strong> and
 									regulated by
 									<strong
@@ -558,7 +564,7 @@
 									<strong
 										>The Lottery Corporation Limited (ABN 21 081 925
 										706)</strong
-									>. The RooSpinny.com brand and content are intellectual
+									>. The MirageLines.com brand and content are intellectual
 									property of <strong>The Lottery Corporation Limited</strong>.
 									All rights reserved.
 								</p>
@@ -606,7 +612,7 @@
 								</div>
 							</div>
 							<p>
-								&copy; 2024 RooSpinny.com. All rights reserved. RooSpinny is a
+								&copy; 2024 MirageLines.com. All rights reserved. MirageLines is a
 								registered trademark.
 							</p>
 						</div>
