--- a/policy.html
+++ b/policy.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>RooSpinny.com - Privacy Policy | Your Data, Our Priority</title>
+		<title>MirageLines.com - Privacy Policy | Your Data, Our Priority</title>
 		<link rel="icon" href="./assets/images/ico3.png" />
 
 		<link
@@ -28,7 +28,11 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-md-6">
-						<a href="./?age-verification=true" class="rsn-logo">Roo<span>Spinny</span></a>
+						<a href="./?age-verification=true" class="rsn-logo"><img
+							src="./assets/images/logo.png"
+							alt="MirageLines Logo"
+							style="width: 300px"
+						/></a>
 					</div>
 					<div class="col-md-6 text-end">
 						<button
@@ -83,7 +87,7 @@
 				<div class="container">
 					<h1>Privacy Policy</h1>
 					<p>
-						At RooSpinny.com, your privacy is extremely important to us. This
+						At MirageLines.com, your privacy is extremely important to us. This
 						document details how we collect, use, and protect your personal
 						information when you visit or interact with our website.
 					</p>
@@ -132,7 +136,7 @@
 					<p>
 						You have the right to request access to, correction, or deletion of
 						your personal data. To exercise these rights, contact us at
-						<a href="mailto:support@RooSpinny.com">support@RooSpinny.com</a>.
+						<a href="mailto:support@MirageLines.com">support@MirageLines.com</a>.
 					</p>
 
 					<h2>Policy Changes</h2>
@@ -144,7 +148,7 @@
 					<p>
 						If you have any questions or concerns about this policy, please
 						email us at
-						<a href="mailto:support@RooSpinny.com">support@RooSpinny.com</a>.
+						<a href="mailto:support@MirageLines.com">support@MirageLines.com</a>.
 					</p>
 				</div>
 			</section>
@@ -153,7 +157,11 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-4 mb-4">
-							<a href="./?age-verification=true" class="footer-logo">RooSpinny</a>
+							<a href="./?age-verification=true" class="footer-logo"><img
+								src="./assets/images/logo.png"
+								alt="MirageLines Logo"
+								style="width: 200px"
+							/></a>
 							<p>
 								Australia's top lottery since 2017. Fully licensed and regulated
 								by the Australian Lottery Commission.
@@ -180,7 +188,7 @@
 						<div class="col-lg-4 col-md-4 mb-4">
 							<div class="footer-links">
 								<h5>Help & Support</h5>
-								<a href="mailto:support@roospinny.com">Email Us</a>
+								<a href="mailto:support@MirageLines.com">Email Us</a>
 								<a href="tel:+1800858858">Call 1800 858 858</a>
 
 								<a href="https://www.gambleaware.org/" target="_blank"
@@ -214,7 +222,7 @@
 									>
 								</p>
 								<p>
-									RooSpinny.com is fully authorized by the
+									MirageLines.com is fully authorized by the
 									<strong>New South Wales Government Department</strong> and
 									regulated by
 									<strong
@@ -226,7 +234,7 @@
 									<strong
 										>The Lottery Corporation Limited (ABN 21 081 925
 										706)</strong
-									>. The RooSpinny.com brand and content are intellectual
+									>. The MirageLines.com brand and content are intellectual
 									property of <strong>The Lottery Corporation Limited</strong>.
 									All rights reserved.
 								</p>
@@ -276,7 +284,7 @@
 							</div>
 
 							<p>
-								&copy; 2024 RooSpinny.com. All rights reserved. RooSpinny is a
+								&copy; 2025 MirageLines.com. All rights reserved. MirageLines is a
 								registered trademark.
 							</p>
 						</div>
