--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>RooSpinny.com - User Terms | Fair Play & Rules</title>
+		<title>MirageLines.com - User Terms | Fair Play & Rules</title>
 		<link rel="icon" href="./assets/images/ico3.png" />
 
 		<link
@@ -28,7 +28,11 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-md-6">
-						<a href="./?age-verification=true" class="rsn-logo">Roo<span>Spinny</span></a>
+						<a href="./?age-verification=true" class="rsn-logo"><img
+							src="./assets/images/logo.png"
+							alt="MirageLines Logo"
+							style="width: 300px"
+						/></a>
 					</div>
 					<div class="col-md-6 text-end">
 						<button
@@ -83,14 +87,14 @@
 				<div class="container">
 					<h1>Terms & Conditions</h1>
 					<p>
-						Welcome to RooSpinny.com! By using this website, you agree to the
+						Welcome to MirageLines.com! By using this website, you agree to the
 						following terms. If you do not accept these terms, please do not use
 						our platform.
 					</p>
 
 					<h2>Eligibility</h2>
 					<p>
-						RooSpinny.com is only for users who are 18 years or older. By
+						MirageLines.com is only for users who are 18 years or older. By
 						accessing this site, you confirm you meet the age requirement and
 						are legally allowed to participate in lottery activities in your
 						area.
@@ -105,7 +109,7 @@
 
 					<h2>Intellectual Property</h2>
 					<p>
-						All content on RooSpinny.com—including text, images, trademarks, and
+						All content on MirageLines.com—including text, images, trademarks, and
 						logos—belongs to us or our licensors. Any unauthorized copying or
 						distribution is strictly forbidden.
 					</p>
@@ -113,13 +117,13 @@
 					<h2>Content Accuracy</h2>
 					<p>
 						We strive to provide accurate and current information, but
-						RooSpinny.com does not guarantee the completeness or accuracy of any
+						MirageLines.com does not guarantee the completeness or accuracy of any
 						content. Use the site at your own risk.
 					</p>
 
 					<h2>Limitation of Liability</h2>
 					<p>
-						RooSpinny.com is not liable for any direct, indirect, or incidental
+						MirageLines.com is not liable for any direct, indirect, or incidental
 						damages resulting from your use of the site or inability to access
 						its features.
 					</p>
@@ -137,12 +141,12 @@
 					<h2>Changes to These Terms</h2>
 					<p>
 						We may update these Terms & Conditions at any time. Continued use of
-						RooSpinny.com after changes means you accept the new terms.
+						MirageLines.com after changes means you accept the new terms.
 					</p>
 
 					<p>
 						If you have any questions about these terms, contact us at
-						<a href="mailto:support@RooSpinny.com">support@RooSpinny.com</a>.
+						<a href="mailto:support@MirageLines.com">support@MirageLines.com</a>.
 					</p>
 				</div>
 			</section>
@@ -151,7 +155,11 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-4 mb-4">
-							<a href="./" class="rsn-footer-logo">RooSpinny</a>
+							<a href="./" class="rsn-footer-logo"><img
+								src="./assets/images/logo.png"
+								alt="MirageLines Logo"
+								style="width: 200px"
+							/></a>
 							<p>
 								Australia's top lottery since 2017. Fully licensed and regulated
 								by the Australian Lottery Commission.
@@ -178,7 +186,7 @@
 						<div class="col-lg-4 col-md-4 mb-4">
 							<div class="rsn-footer-links">
 								<h5>Help & Support</h5>
-								<a href="mailto:support@roospinny.com">Email Us</a>
+								<a href="mailto:support@MirageLines.com">Email Us</a>
 								<a href="tel:+1800858858">Call 1800 858 858</a>
 
 								<a href="https://www.gambleaware.org/" target="_blank"
@@ -212,7 +220,7 @@
 									>
 								</p>
 								<p>
-									RooSpinny.com is fully authorized by the
+									MirageLines.com is fully authorized by the
 									<strong>New South Wales Government Department</strong> and
 									regulated by
 									<strong
@@ -224,7 +232,7 @@
 									<strong
 										>The Lottery Corporation Limited (ABN 21 081 925
 										706)</strong
-									>. The RooSpinny.com brand and content are intellectual
+									>. The MirageLines.com brand and content are intellectual
 									property of <strong>The Lottery Corporation Limited</strong>.
 									All rights reserved.
 								</p>
@@ -274,7 +282,7 @@
 							</div>
 
 							<p>
-								&copy; 2024 RooSpinny.com. All rights reserved. RooSpinny is a
+								&copy; 2024 MirageLines.com. All rights reserved. MirageLines is a
 								registered trademark.
 							</p>
 						</div>
